--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 PORT=8080
+MONGODB_CNN=mongodb+srv://user_node_cafe:fblpYdCPLuMw2V8k@clustercafe.tjcrc.mongodb.net/cafeDB
+USER=user_node_cafe
+PASS=fblpYdCPLuMw2V8k
