--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "google-auth-library": "^7.10.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.14",
+    "socket.io": "^4.4.0",
     "uuid": "^8.3.2"
   }
 }
